--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,4 +11,8 @@
 
 body {
     background-color: $colorFondo;
+    overflow-x: hidden;
+}
+html {
+    overflow-x: hidden;
 }
